Made Some Corrections

--- a/public_html/FishBodyReader.html
+++ b/public_html/FishBodyReader.html
@@ -143,14 +143,18 @@
                         <div id="du_chart" class="chartClass"></div>
                 <!-- Write your comments here -->
                 </div> 
+            <!-- Write your comments here -->
+            <div id="title">Kirchoff Ray Mode Grapher</div>
             <!-- Write your comments here -->    
             <select id="toolSelector" onclick="selectAcousticsToolOnClick();">
                 <!-- Write your comments here -->
-                <option value="chooseScatteringTool.">Choose Scattering Tool..</option>
+                <option value="chooseScatteringTool.">Choose Scattering Tool</option>
                 <!-- Write your comments here -->
-                <option value="sphereScattering">Fluid Sphere Solution Grapher</option>
+                <option value="fluidSphereScattering">Fluid Sphere</option>
                 <!-- Write your comments here -->
-                <option value="fishBodyScattering">Kirchoff Ray Mode Solution Grapher</option>
+                <option value="fishBodyScattering">Kirchoff Ray Mode</option>
+                <!-- Write your comments here -->
+                <option value="rigidSphereScattering">Rigid Sphere</option>
             <!-- Write your comments here -->
             </select>     
         <!-- Write your comments here -->      
