--- a/public_html/FishBodyReader.html
+++ b/public_html/FishBodyReader.html
@@ -144,7 +144,7 @@
                 <!-- Write your comments here -->
                 </div> 
             <!-- Write your comments here -->
-            <div id="title">Kirchoff Ray Mode Grapher</div>
+            <div id="title">Kirchhoff Ray Mode Grapher</div>
             <!-- Write your comments here -->    
             <select id="toolSelector" onclick="selectAcousticsToolOnClick();">
                 <!-- Write your comments here -->
@@ -152,7 +152,7 @@
                 <!-- Write your comments here -->
                 <option value="fluidSphereScattering">Fluid Sphere</option>
                 <!-- Write your comments here -->
-                <option value="fishBodyScattering">Kirchoff Ray Mode</option>
+                <option value="fishBodyScattering">Kirchhoff Ray Mode</option>
                 <!-- Write your comments here -->
                 <option value="rigidSphereScattering">Rigid Sphere</option>
             <!-- Write your comments here -->
